...
  });

  const { styles } = useStyles(codeListItemStylesheet);

  return (
    <AnimatedPressable
      testID="code-list-item"
      style={[styles.box(CardStyleColor[style]), animatedStyle]}
      onPress={onPress}
      onLongPress={onLongPress}>
      <View style={styles.titleBox}>
        <Text style={styles.title}>{name}</Text>
      </View>
...
